--- a/style.css
+++ b/style.css
@@ -1,5 +1,22 @@
+/* .passion-one-regular {
+    font-family: "Passion One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.passion-one-bold {
+    font-family: "Passion One", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.passion-one-black {
+    font-family: "Passion One", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+} */
+
 body {
-    height: 200vh;
     width: auto;
     background: rgb(69, 0, 87);
 }
@@ -19,6 +36,10 @@ header {
 
 header a {
     color: rgb(228, 225, 218);
+    font-family: "Passion One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
 }
 
 ul {
@@ -29,11 +50,37 @@ ul a {
     color: rgb(228, 225, 218);
 }
 
+.inicio {
+    height: 100vh;
+}
+
 .container {
-    width: 900px;
+    width: 100%;
     height: 400px;
     align-content: center;
     text-align: center;
     position: relative;
-    left: 194px;
+    color: rgb(228, 225, 218);
+    top: 100px;
+    font-family: "Passion One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 20px;
+}
+
+.uni {
+    width: 60%;
+    height: 90%;
+}
+
+.saiba_mais {
+    width: 205px;
+    height: 50px;
+    background: #FB6C14;
+    border-radius: 8px;
+    color: rgb(228, 225, 218);
+    font-family: "Passion One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 20px;
 }
