--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ ul a {
     font-weight: 400;
     font-style: normal;
     font-size: 20px;
+    cursor: pointer;
 }
 
 /*PAGINA 2 - QUEM SOMOS?*/
@@ -146,7 +147,7 @@ ul a {
 }
 
 .texto {
-    top: -1245px;
+    top: -1200px;
     width: 35%;
     position: relative;
     height: 50%;
@@ -155,7 +156,7 @@ ul a {
     text-align: center;
     align-content: flex-end;
     left: 896px;
-    font-size: 20px;
+    font-size: 25px
 }
 
 /*PAGINA 3 - POR QUE VOCÊ DEVE CUMPRIR SUAS HORAS? */
@@ -176,10 +177,14 @@ ul a {
     width: 40%;
     height: 50%;
     position: relative;
-    top: -652px;
+    top: -635px;
     left: 56px;
-    font-size: 20px;
+    font-size: 25px;
     text-align: center;
+    color: #FB6C14;
+    font-family: "Passion One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .title {
@@ -224,11 +229,25 @@ ul a {
     font-weight: 400;
     width: 38%;
     font-style: normal;
-    font-size: 55px;
+    font-size: 60px;
     text-align: center;
     left: 778px;
     position: relative;
     top: 40px;
+}
+
+.seta {
+    position: relative;
+    width: 60vh;
+}
+
+.link {
+    color: #FB6C14;
+    font-family: "Passion One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 60px;
+    text-decoration: none;
 }
 
 /*PAGINA 5 - UNI  */
@@ -257,12 +276,12 @@ ul a {
     text-decoration: none;
 }
 
-.dicas{
+.dicas {
     text-decoration: none;
     color: rgb(228, 225, 218);
 }
 
-
+/* 
 @media screen and (min-width: 200px) and (max-width: 640px) {
 
     * {
@@ -276,7 +295,7 @@ ul a {
         height: 100%;
     }
     
-    /*NAV BAR  */
+    /*NAV BAR/
 
     nav {
         width: 100%;
@@ -322,7 +341,7 @@ ul a {
         margin-left: 1rem;
     }
 
-    /*PAGINA 1 - INICIO*/
+    /*PAGINA 1 - INICIO/
 
     #inicio {
         height: 100vh;
@@ -360,7 +379,7 @@ ul a {
         font-size: 15px;
     }
 
-    /*PAGINA 2 - QUEM SOMOS?*/
+    /*PAGINA 2 - QUEM SOMOS?/
     #aboutUS {
         height: 90vh;
     }
@@ -384,7 +403,7 @@ ul a {
         z-index: -1;
         top: -77px;
         position: relative;
-        /*height: 938px; */
+        /*height: 938px; /
         width: 100%;
         height: 70vh;
     }
@@ -410,7 +429,7 @@ ul a {
         font-size: 12px;
     }
 
-    /*PAGINA 3 - POR QUE VOCÊ DEVE CUMPRIR SUAS HORAS? */
+    /*PAGINA 3 - POR QUE VOCÊ DEVE CUMPRIR SUAS HORAS? /
 
     #cumprir {
         height: 80vh;
@@ -447,7 +466,7 @@ ul a {
         top: -55px;
     }
 
-    /*PAGINA 4 - COMO VALIDAR SUAS HORAS NO ULIFE?*/
+    /*PAGINA 4 - COMO VALIDAR SUAS HORAS NO ULIFE?/
     #validar {
         height: 90vh;
     }
@@ -483,7 +502,7 @@ ul a {
         top: 40px;
     }
 
-    /*PAGINA 5 - UNI  */
+    /*PAGINA 5 - UNI  /
 
     #unitalk {
         height: 60vh;
@@ -508,4 +527,4 @@ ul a {
         font-size: 16px;
         margin: auto;
     }
-}
+} */
